# CopyRells

./: .gitattributes  .gitignore  README.md  UV_QUICKSTART.md  agent.py  config_example.txt  frontend_streamlit.py  pyproject.toml  requirements.txt  run.ps1  run.sh  teste_transcription_reader.py  transcripter.py  transcription_reader.py  transcriptions.json
agent-ui/: package-lock.json
prompts/: copywriter_modelador.md
